--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,7 @@
     <div class="backgroundpage">
         <div class="navbar">
             <ul>
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="resume template.pdf" target="_blank">Resume </a></li>
                 <li><a href="contactMe.html">Contact Me</a></li>
